--- a/index.html
+++ b/index.html
@@ -3,52 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Карточки | Проект 1</title>
+    <link rel="stylesheet" href="./style.css" />
+    <title>Cards</title>
   </head>
   <body>
     <div class="container">
       <div
         class="slide"
         style="
-          background-image: url('https://images.unsplash.com/photo-1660361339436-ddd4b85372da?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3000&q=80');
+          background-image: url('./img/tiger.jpg');
         "
       >
-        <h3>House</h3>
+        <h3>Tiger</h3>
       </div>
       <div
         class="slide"
         style="
-          background-image: url('https://images.unsplash.com/photo-1573950940509-d924ee3fd345?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1696&q=80');
+          background-image: url('./img/bear.jpg');
         "
       >
-        <h3>Lamborghini</h3>
+        <h3>Bear</h3>
       </div>
       <div
         class="slide"
         style="
-          background-image: url('https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1694&q=80');
+          background-image: url('./img/horse.jpg');
         "
       >
-        <h3>Camaro</h3>
+        <h3>Horse</h3>
       </div>
       <div
         class="slide active"
         style="
-          background-image: url('https://images.unsplash.com/photo-1535732820275-9ffd998cac22?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1650&q=80');
+          background-image: url('./img/puma.jpg');
         "
       >
-        <h3>Aston</h3>
+        <h3>Puma</h3>
       </div>
       <div
         class="slide"
         style="
-          background-image: url('https://images.unsplash.com/photo-1554744512-d6c603f27c54?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');
+          background-image: url('./img/rhino.jpg');
         "
       >
-        <h3>Tesla</h3>
+        <h3>Rhino</h3>
       </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
