monkey card added

--- a/index.html
+++ b/index.html
@@ -33,12 +33,20 @@
         <h3>Horse</h3>
       </div>
       <div
-        class="slide active"
+        class="slide"
         style="
           background-image: url('./img/puma.jpg');
         "
       >
         <h3>Puma</h3>
+      </div>
+      <div
+        class="slide"
+        style="
+          background-image: url('./img/monkey.jpg');
+        "
+      >
+        <h3>Monkey</h3>
       </div>
       <div
         class="slide"
